--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" class="rounded-full" href="https://my9-learning-center.vercel.app/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>MY9</title>
   </head>
   <body class="bg-white dark:bg-gray-900 duration-300 text-black dark:text-white">
     <div id="root"></div>
